main.tf
provider "aws" {
  region = "ap-southeast-1"
}

### AMI/OS ###
data "aws_ami" "amazon_linux" {
  most_recent = true

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-2.0*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }

  owners = ["amazon"] # Canonical
}

### EC2 ### 
resource "aws_iam_role" "test_role" {
  name = "ssm_test_role"

  assume_role_policy = <<EOF
{
"Version": "2012-10-17",
"Statement": {
"Effect": "Allow",
"Principal": {"Service": "ec2.amazonaws.com"},
"Action": "sts:AssumeRole"
}
}
EOF
}

resource "aws_iam_role_policy_attachment" "test_attach" {
  role       = aws_iam_role.test_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
}

resource "aws_iam_instance_profile" "test_profile" {
  name = "test_profile"
  role = aws_iam_role.test_role.name
}

resource "aws_instance" "ec2_instance" {
  user_data = file("install_site.sh")
  ami = data.aws_ami.amazon_linux.id
  associate_public_ip_address = true
  instance_type = "t2.micro"
  vpc_security_group_ids = [aws_security_group.allow_ports.id]
  iam_instance_profile   = aws_iam_instance_profile.test_profile.name

  tags = {
    Name = "new-ec2-instance-tf"
  }
}

### Security Group ###
resource "aws_security_group" "allow_ports" {
  name        = "allow_ports"
  description = "Allow ports 80, 443"

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "HTTPS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ports"
  }
}
